# bread-of-life

./: .env.production  .gitignore  CLAUDE.md  CREDITS.md  LICENSE  README.md  index.html  node_modules  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android.yml  desktop.yml  pages.yml
art/image-gen/: generate.py  prompts.json
deploy/sync-server/: .env.example  Caddyfile  Dockerfile  README.md  caddy.Dockerfile  docker-compose.yml  package.json  server.mjs
docs/: DESKTOP.md  HANDOFF.md  MOBILE.md  NATIVE-AUDIO.md  PROJECT-BRIEF.md  RESEARCH-NOTES.md  ROADMAP.md  TECH-LANDSCAPE-2026.md  WORD-FOR-TODAY.md
public/bible/bsb/: 1CH.json  1CO.json  1JN.json  1KI.json  1PE.json  1SA.json  1TH.json  1TI.json  2CH.json  2CO.json  2JN.json  2KI.json  2PE.json  2SA.json  2TH.json  2TI.json  3JN.json  ACT.json  AMO.json  COL.json  DAN.json  DEU.json  ECC.json  EPH.json  EST.json  EXO.json  EZK.json  EZR.json  GAL.json  GEN.json  HAB.json  HAG.json  HEB.json  HOS.json  ISA.json  JAS.json  JDG.json  JER.json  JHN.json  JOB.json  (+28 more)
public/data/devotional/: faiths-checkbook.json  spurgeon.json
public/data/strongs-heb/: 1CH.json  1KI.json  1SA.json  2CH.json  2KI.json  2SA.json  AMO.json  DAN.json  DEU.json  ECC.json  EST.json  EXO.json  EZK.json  EZR.json  GEN.json  HAB.json  HAG.json  HOS.json  ISA.json  JDG.json  JER.json  JOB.json  JOL.json  JON.json  JOS.json  LAM.json  LEV.json  MAL.json  MIC.json  NAM.json  NEH.json  NUM.json  OBA.json  PRO.json  PSA.json  RUT.json  SNG.json  ZEC.json  ZEP.json
public/data/xref/: 1CH.json  (+66 more)
scripts/: appimage-unbundle-webkit.sh  build-crossrefs.mjs  build-devotional.mjs  build-faiths-checkbook.mjs  build-oshb.mjs  build-strongs.mjs  build-versification.mjs  fetch-bible.mjs  verify-plans.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/plugins/all-files/: .gitignore  Cargo.toml  build.rs
src-tauri/plugins/all-files/android/: build.gradle.kts
src-tauri/plugins/all-files/android/src/main/: AndroidManifest.xml
src-tauri/plugins/all-files/android/src/main/java/app/tauri/allfiles/: AllFilesPlugin.kt
src-tauri/plugins/all-files/permissions/: default.toml
src-tauri/plugins/all-files/permissions/autogenerated/commands/: is_manager.toml  request_manage.toml
src-tauri/plugins/all-files/permissions/schemas/: schema.json
src-tauri/plugins/all-files/src/: lib.rs
src-tauri/plugins/native-audio/: build.rs
src-tauri/plugins/native-audio/android/src/main/java/app/tauri/nativeaudio/: NativeAudioPlugin.kt
src-tauri/plugins/native-audio/permissions/: default.toml
src-tauri/src/: allfiles.rs  lib.rs  main.rs
src/ai/: client.ts
src/audio/: controller.ts  engine.ts  queue.ts
src/components/: ui.tsx
src/data/: bible.ts  bip39-wordlist.ts  commentary.ts  devotional.ts  memoryStarters.ts  missler.ts  plans.ts  study.ts
src/db/: crypto.ts  index.ts  repos.ts  sync.ts
src/lib/: day.ts  device.ts  external.ts  feedback.ts  notify.ts  osis.ts  useChapterNav.ts
src/pages/: BiblePage.tsx  CommentaryPage.tsx  CompanionPage.tsx  DashboardPage.tsx  DevotionalPage.tsx  FaithfulnessPage.tsx  GuidedReaderPage.tsx  JournalPage.tsx  MemoryLanePage.tsx  PlansPage.tsx  PrayersPage.tsx  ReadTodayPage.tsx  SearchPage.tsx  SettingsPage.tsx
src/store/: ui.ts
website/: CNAME  index.html
(+92 files in other folders)
