[package]
name = "bread-of-life"
version = "0.3.2"
description = "A warm, offline-first homebase for Bible reading, prayer, and journalling."
authors = ["Matt Shearing"]
edition = "2021"

[lib]
name = "bread_of_life_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.9"
tauri-plugin-opener = "2.5.4"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"

# Native background audio (Media3 ExoPlayer + foreground MediaSessionService) — mobile
# only; desktop keeps the HTML5 audio path. See docs/NATIVE-AUDIO.md.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-native-audio = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
