[package]
name = "bread-of-life"
version = "0.3.6"
description = "A warm, offline-first homebase for Bible reading, prayer, and journalling."
authors = ["Matt Shearing"]
edition = "2021"

[lib]
name = "bread_of_life_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.9"
tauri-plugin-opener = "2.5.4"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.7.1"

# Native background audio (Media3 ExoPlayer + foreground MediaSessionService) — mobile
# only; desktop keeps the HTML5 audio path. See docs/NATIVE-AUDIO.md.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
# Vendored fork of tauri-plugin-native-audio (v1.0.5) adding native PLAYLIST support
# (setQueue/next/previous + index in state) so ExoPlayer advances the day's readings
# itself in the background. See src-tauri/plugins/native-audio + docs/NATIVE-AUDIO.md.
tauri-plugin-native-audio = { path = "plugins/native-audio" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
