[package]
name = "tauri-plugin-all-files"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"
links = "tauri-plugin-all-files"
description = "Android 'All files access' (MANAGE_EXTERNAL_STORAGE) bridge for Tauri"
license = "MIT OR Apache-2.0"

[lib]
name = "tauri_plugin_all_files"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
